@@ -1,5 +1,10 @@
 2004-05-27  Angus Leeming  <angus.leeming@btopenworld.com>
 
+	* fdesign/fd_printC.c (build_fname): if no output_dir is specified,
+	then output files in the current directory.
+
+2004-05-27  Angus Leeming  <angus.leeming@btopenworld.com>
+
 	* fdesign/fd_main.c: improve diagnostics when failing to convert
 	the .fd file to a .[ch] pair.
 	Also remove some redundant cruft.
